syntax = 'proto3';

package message;

option go_package = "proto/pb";

message MessageRequest {
    repeated uint64 UserIDs = 1;
    string Message = 2;
    string Type = 3;
}

message MessageResponse {
    repeated uint64 UserIDs = 1;
    string Message = 2;
}

service MessageService {
    rpc SendMessage (stream MessageRequest) returns (stream MessageResponse);
}
